--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pelion Virtual Device Simulator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ static_url("img/favicon.ico") }}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Electrolize">
@@ -38,7 +39,7 @@
                     style="background-color: rgba(255,255,255,0);height: 57px;margin-top: 4px;padding-top: 0px;">
                     <div class="card-body d-sm-flex justify-content-sm-center align-items-sm-center"
                         style="height: auto;padding: 0px;">
-                        <h4 id="number" onload="generateRandomNumber();" class="d-sm-flex card-title"
+                        <h4 id="number" class="d-sm-flex card-title"
                             style="margin: 0px;color: #bad8fc;font-family: Electrolize, sans-serif;font-size: 38px;">
                         </h4>
                     </div>
