enable shake functionality.

--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -57,7 +57,7 @@
                                 style="padding: 0px;"><i class="fas fa-circle led"
                                     style="font-size: 30px;color: rgb(68,255,5);"></i></div>
                             <div class="col-5 d-sm-flex justify-content-sm-center"><button id="shakeButtonId"
-                                    onclick="shakeScript(); shakeButtonAnimation(); " class="btn btn-primary btn-push"
+                                    onclick="toggleShake();" class="btn btn-primary btn-push animate__animated"
                                     type="button"
                                     style="background-color: rgb(115,70,60);color: rgb(122,122,122);font-family: Electrolize, sans-serif;">SHAKE</button>
                             </div>
