introduce SENSOR and INTERVAL params

--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -84,7 +84,7 @@
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-right"
                                             style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                            Vibration&nbsp;</p>
+                                            {{ sensor_type }} &nbsp;</p>
                                         <p id="deviceID" class="text-right"
                                             style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
                                             Loading</p>
