enable blink_resource to simulate POST

--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -54,8 +54,8 @@
                                     style="background-color: rgb(115,70,60);color: rgb(122,122,122));">SECURE</button>
                             </div>
                             <div class="col-2 d-sm-flex justify-content-sm-center align-items-sm-center"
-                                style="padding: 0px;"><i class="fas fa-circle led"
-                                    style="font-size: 30px;color: rgb(68,255,5);"></i></div>
+                                style="padding: 0px;"><i id="led" class="fas fa-circle"
+                                    style="font-size: 30px;color: rgb(0,0,0);"></i></div>
                             <div class="col-5 d-sm-flex justify-content-sm-center"><button id="shakeButtonId"
                                     onclick="toggleShake();" class="btn btn-primary btn-push animate__animated"
                                     type="button"
