--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -51,7 +51,7 @@
                         <div class="row" style="margin: 0px;min-width: 165px;width: 358px;">
                             <div class="col-5 d-sm-flex justify-content-sm-center align-items-sm-center invisible">
                                 <button onclick="securityScript()" class="btn btn-primary btn-push" type="button"
-                                    style="background-color: rgb(115,70,60);color: rgb(122,122,122));">SECURE</button>
+                                    style="background-color: rgb(115,70,60);color: rgb(122,122,122);">SECURE</button>
                             </div>
                             <div class="col-2 d-sm-flex justify-content-sm-center align-items-sm-center"
                                 style="padding: 0px;"><i id="led" class="fas fa-circle"
@@ -103,25 +103,25 @@
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-left"
                                             style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                            ▌Encrypted messaging</p>
+                                            <span class="glyphicon glyphicon-ok"></span>Encrypted messaging</p>
                                         <p class="text-left"
                                             style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                            ▌Certificate based provisioning</p>
+                                            <span class="glyphicon glyphicon-ok"></span>Certificate based provisioning</p>
                                         <p class="text-left"
                                             style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                            ▌Bootstrap verification</p>
+                                            <span class="glyphicon glyphicon-ok"></span>Bootstrap verification</p>
                                     </div>
                                 </div>
                                 <div class="col" style="padding: 0px;">
                                     <p class="text-right tick-box visible"
                                         style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                        <span class="glyphicon">&#xe013;</span></p>
+                                        <span class="fas fa-check"></span></p>
                                     <p class="text-right tick-box visible"
                                         style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                        <span class="glyphicon">&#xe013;</span></p>
+                                        <span class="fas fa-check"></span></p>
                                     <p class="text-right tick-box visible"
                                         style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
-                                        <span class="glyphicon">&#xe013;</span></p>
+                                        <span class="fas fa-check"></span></p>
                                 </div>
 
                             </div>
@@ -144,7 +144,7 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
-
+    <script src="https://kit.fontawesome.com/4418250580.js" crossorigin="anonymous"></script>
     <script src="{{ static_url("js/script.js") }}" type="text/javascript"></script>
 </body>
 
