--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -88,7 +88,7 @@
                                         <p id="deviceID" class="text-right"
                                             style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
                                             Loading</p>
-                                        <p class="text-right"
+                                        <p id="firmware" class="text-right"
                                             style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">
                                             Demo firmware</p>
                                     </div>
