New branch to add regular counter like behaviour just as for normal mbed cloud client example toggle between counter and vibration by declaring the environment variable SENSOR as vibration or counter at docker run time

--- a/sim-webapp/templates/index.html
+++ b/sim-webapp/templates/index.html
@@ -59,7 +59,7 @@
                             <div class="col-5 d-sm-flex justify-content-sm-center"><button id="shakeButtonId"
                                     onclick="toggleShake();" class="btn btn-primary btn-push animate__animated"
                                     type="button"
-                                    style="background-color: rgb(115,70,60);color: rgb(122,122,122);font-family: Electrolize, sans-serif;">SHAKE</button>
+                                    style="background-color: rgb(115,70,60);color: rgb(122,122,122);font-family: Electrolize, sans-serif;">Button</button>
                             </div>
                         </div>
                     </div>
